<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    

    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">


        <TextView
            android:id="@+id/txt_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:text="@string/location"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/timezone"
            android:textColor="@android:color/darker_gray"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_location" />


        <TextView

            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:text="@string/degree1"
            android:textColor="@android:color/black"
            android:textSize="120sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:background="@drawable/sun"
            tools:ignore="ContentDescription" />


        <TextView

            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sun_message"
            android:textColor="@color/textColor"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="40dp"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:orientation="vertical">


            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtDate_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_april1"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/sixteendp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteY="615dp" />


                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginStart="@dimen/forty"
                    android:background="@drawable/rain"
                    tools:ignore="ContentDescription" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginStart="@dimen/sixtydp"
                    android:text="@string/degree2"
                    android:textColor="@color/textColor"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:layout_editor_absoluteY="586dp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtDate_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date_april2"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/sixteendp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:ignore="MissingConstraints" />

                    <ImageView
                        android:layout_width="@dimen/imageWidth"
                        android:layout_height="@dimen/imageHeight"
                        android:layout_marginStart="40dp"
                        android:background="@drawable/rainny"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/sixtydp"
                        android:text="@string/degree3"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/sixteendp"
                        android:textStyle="bold"
                        tools:layout_editor_absoluteY="586dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        tools:ignore="UselessParent">

                        <TextView
                            android:id="@+id/txtDate_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/date_april3"
                            android:textColor="@color/textColor"
                            android:textSize="@dimen/sixteendp"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="parent"
                            tools:ignore="MissingConstraints" />


                        <ImageView
                            android:layout_width="@dimen/imageWidth"
                            android:background="@drawable/rainbow"
                            android:layout_height="@dimen/imageHeight"
                            android:layout_marginStart="@dimen/forty"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/sixtydp"
                            android:text="@string/degree2"
                            android:textColor="@color/textColor"
                            android:textSize="@dimen/sixteendp"
                            android:textStyle="bold"
                            tools:layout_editor_absoluteY="586dp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>

